prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/import_03.diag.txt
ERROR: missing "*/" in comment
testData/diagnostics/import_03.nut:1:0

/*
^--------------------
import "a" as x


